kustomize-guestbook/guestbook-ui-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  rules:
  - http:
      paths:
      - path: /guestbook
        backend:
          serviceName: guestbook-ui
          servicePort: 80
