kustomize-guestbook/guestbook-ui-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - guestbooks.expedient.com
    secretName: expedient-com
  rules:
  - host: guestbooks.expedient.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: guestbook-ui
          servicePort: 80
